open in same directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1229,3 +1229,10 @@ run -b '[ -z "#{window_active}" ] && [ -z "#{version}" ] && tmux set display-tim
 # }
 #
 # "$@"
+
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+
